; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_patch_parse.c_parse_patch_body.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_patch_parse.c_parse_patch_body.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@.str = private unnamed_addr constant [17 x i8] c"GIT binary patch\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"Binary files \00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_6__*)* @parse_patch_body to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_patch_body(i32* %0, %struct.TYPE_6__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %5, align 8
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %8 = call i64 @git_parse_ctx_contains_s(i32* %7, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %13 = call i32 @parse_patch_binary(i32* %11, %struct.TYPE_6__* %12)
  store i32 %13, i32* %3, align 4
  br label %27

14:                                               ; preds = %2
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i32 0, i32 0
  %17 = call i64 @git_parse_ctx_contains_s(i32* %16, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i32*, i32** %4, align 8
  %21 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %22 = call i32 @parse_patch_binary_nodata(i32* %20, %struct.TYPE_6__* %21)
  store i32 %22, i32* %3, align 4
  br label %27

23:                                               ; preds = %14
  %24 = load i32*, i32** %4, align 8
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %26 = call i32 @parse_patch_hunks(i32* %24, %struct.TYPE_6__* %25)
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %23, %19, %10
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i64 @git_parse_ctx_contains_s(i32*, i8*) #1

declare dso_local i32 @parse_patch_binary(i32*, %struct.TYPE_6__*) #1

declare dso_local i32 @parse_patch_binary_nodata(i32*, %struct.TYPE_6__*) #1

declare dso_local i32 @parse_patch_hunks(i32*, %struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
